sfSandBoxCode/force-app/main/default/objects/Trial_Observation__c/Trial_Observation__c.object-meta.xml
<CustomObject>
    <label>Trial Observation</label>
    <nameField>
        <displayFormat>TRIAL-OBSV-{0000}</displayFormat>
        <label>Trial Observation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Observations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>