sfSandBoxCode/force-app/main/default/objects/Trial_Observation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trial Observations</relationshipLabel>
    <relationshipName>Trial_Observations</relationshipName>
    <type>Lookup</type>
</CustomField>