sfSandBoxCode/force-app/main/default/objects/Trial_Observation__c/fields/Observation_date__c.field-meta.xml
<CustomField>
    <fullName>Observation_date__c</fullName>
    <label>Observation date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>