sfSandBoxCode/force-app/main/default/objects/Trial_Observation__c/fields/Observations__c.field-meta.xml
<CustomField>
    <fullName>Observations__c</fullName>
    <label>Observations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>