sfSandBoxCode/force-app/main/default/objects/Trial_Observation__c/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <label>Trial</label>
    <referenceTo>Trial__c</referenceTo>
    <relationshipLabel>Trial Observations</relationshipLabel>
    <relationshipName>Trial_Observations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>